package com.mysite.BeBeeKeepingGreen;

import org.springframework.stereotype.Controller;
import org.springframework.web.bind.annotation.GetMapping;

@Controller
public class MainController {
    @GetMapping("/home")
    public String home() {
        return "HomeScreen";
    }

    @GetMapping("/")
    public String root(){
        return "redirect:/home";
    }

}
